Adding sonar and jacoco in project